# django_auto_translator

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pubish_pypi.yml  static.yml
src/django_auto_translator/: services.py  utils.py
src/django_auto_translator/management/commands/: translate_messages.py
website/public/: index.html
