[build-system]
requires = ["hatchling","deep-translator","django","polib","six"]
build-backend = "hatchling.build"


[project]
name = "django_auto_translator"
version = "0.1.1"
authors = [
  { name="Myridia", email="django_auto_translator@myridia.com" },
]
description = "Automatically translate Django's pot Files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/myridia/django_auto_translator"
Issues = "https://github.com/myridia/django_auto_translator/issues"